# cloud_security

./: .pre-commit-config.yaml  .secrets.baseline  README.md  package-lock.json
cloud_security_scout/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  requirements.txt
cloud_security_scout/.github/workflows/: claude.yaml
cloud_security_scout/frontend/: README.md
cloud_security_scout/frontend/y/: .env.example  .gitignore  index.html  package-lock.json  package.json
cloud_security_scout/frontend/y/amplify/data/: resource.ts
cloud_security_scout/frontend/y/src/: App.css  App.tsx
cloud_security_scout/frontend/y/src/components/: MovieDashboard.tsx
cloud_security_scout/scripts/: dynamodb_encryption_check.py  main.py  s3_check.py  security_groups.py
cloud_security_scout/security_scout/: cdk.json  package-lock.json  package.json  security_scout_dynamodb.ts
cloud_security_scout/security_scout/lambda/dynamodb-encryption/: dynamodb_encryption_check.py
cloud_security_scout/security_scout/lambda/security-groups/: security_groups_check.py
cloud_security_scout/security_scout/lib/: security-scout-api.ts  security-scout-dynamodb-schema.ts  security-scout-dynamodb.ts  security-scout-sns.ts  security_scout-stack.ts
cloud_security_scout/security_scout/test/: security_scout.test.ts
secure-file-vault/: .env.example  .gitignore  README.md  cdk-outputs.json  cdk.json  cleanup.py  cognito_assigner.py  customer_script.py  details.txt  iamusers.sh  package-lock.json  package.json  requirements.txt  test-amplify-local.html  (+4 more)
(+32 files in other folders)
